chore: reorganize assets and add css/js directories

--- a/footer.html
+++ b/footer.html
@@ -1,92 +1,189 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AMMN Footer</title>
-    <link rel="stylesheet" href="footer.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/css/footer.css" />
+  </head>
+  <body>
     <footer class="footer">
-        <div class="footer-container">
-            <div class="footer-top">
-                <div class="footer-brand">
-                    <div class="brand-logo">
-                        <div class="brand-name">
-                            <h2>AMMN</h2>
-                            <img src="Vector (Stroke).png" alt="أمـن" class="brand-logo-icon">
-                        </div>
-                        <div class="logo-icon">
-                            <img src="Vector 2 (1).png" alt="AMMN Logo" class="brand-logo-img">
-                        </div>
-                    </div>
-                    <div class="app-download">
-                        <h4>Download Our Mobile App</h4>
-                        <p>We are live on google play store as well as Apple App Store, Scan QR Below</p>
-                        <div class="qr-codes">
-                            <div class="qr-code">
-                                <img src="image 828.png" alt="qr-code1" class="qr-code1-img">
-                            </div>
-                            <div class="qr-code">
-                                <img src="image 829.png" alt="qr-code2" class="qr-code2-img">
-                            </div>
-                        </div>
-                    </div>
-                </div>  
-                <div class="footer-column">
-                    <h3>Quick Links</h3>
-                    <ul class="footer-links">
-                        <li><a href="#">Home <img src="Vector 15.png" alt="Vector"></a></li>
-                        <li><a href="#">About <img src="Vector 15.png" alt="Vector"></a></li>
-                        <li><a href="#">Contact <img src="Vector 15.png" alt="Vector"></a></li>
-                        <li><a href="#">Blog <img src="Vector 15.png" alt="Vector"></a></li>
-                        <li><a href="#">FAQ <img src="Vector 15.png" alt="Vector"></a></li>
-                        <li><a href="#">Job <img src="Vector 15.png" alt="Vector"></a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Insurance Types</h3>
-                    <ul class="footer-links">
-                        <li><a href="#">Motor Insurance <img src="Vector 15.png" alt="Vector"></a></li>
-                        <li><a href="#">Domestic Insurance <img src="Vector 15.png" alt="Vector"></a></li>
-                        <li><a href="#">SME Insurance <img src="Vector 15.png" alt="Vector"></a></li>
-                        <li><a href="#">Medical Malpractice Insurance <img src="Vector 15.png" alt="Vector"></a></li>
-                        <li><a href="#">Vehicle Insurance <img src="Vector 15.png" alt="Vector"></a></li>
-                        <li><a href="#">House Insurance <img src="Vector 15.png" alt="Vector"></a></li>
-                        <li><a href="#">Travel Insurance <img src="Vector 15.png" alt="Vector"></a></li>
-                    </ul>
-                </div>
-                <div class="footer-column social-section">
-                    <h3>Follow us on</h3>
-                    <div class="social-links">
-                        <a href="#" class="social-facebook" aria-label="Facebook">
-                            <img src="Frame 1171279839.png" alt="Vector" class="social-link-icon">
-                        </a>
-                        <a href="#" class="social-instagram" aria-label="Instagram">
-                            <img src="Frame 1171279840.png" alt="Vector" class="social-link-icon">
-                        </a>
-                        <a href="#" class="social-linkedin" aria-label="LinkedIn">
-                           <img src="Frame 1171279841.png" alt="Vector" class="social-link-icon">
-                        </a>
-                        <a href="#" class="social-pinterest" aria-label="Pinterest">
-                           <img src="Frame 1171279842.png" alt="Vector" class="social-link-icon">
-                        </a>
-                    </div>
-                </div>
+      <div class="footer-container">
+        <div class="footer-top">
+          <div class="footer-brand">
+            <div class="brand-logo">
+              <div class="brand-name">
+                <h2>AMMN</h2>
+                <img
+                  src="/assets/Vector (Stroke).png"
+                  alt="أمـن"
+                  class="brand-logo-icon"
+                />
+              </div>
+              <div class="logo-icon">
+                <img
+                  src="/assets/Vector 2 (1).png"
+                  alt="AMMN Logo"
+                  class="brand-logo-img"
+                />
+              </div>
             </div>
-            <div class="footer-bottom">
-                <div class="copyright">
-                    <span>©</span>
-                    <img src="Vector 2.png" alt="AMMN Logo" class="footer-logo-img">
-                    <span>2025 - All rights reserved</span>
+            <div class="app-download">
+              <h4>Download Our Mobile App</h4>
+              <p>
+                We are live on google play store as well as Apple App Store,
+                Scan QR Below
+              </p>
+              <div class="qr-codes">
+                <div class="qr-code">
+                  <img
+                    src="/assets/image 828.png"
+                    alt="qr-code1"
+                    class="qr-code1-img"
+                  />
                 </div>
-                <div class="footer-legal">
-                    <a href="#">Privacy Policy</a>
-                    <span>|</span>
-                    <a href="#">T&C</a>
+                <div class="qr-code">
+                  <img
+                    src="/assets/image 829.png"
+                    alt="qr-code2"
+                    class="qr-code2-img"
+                  />
                 </div>
+              </div>
             </div>
+          </div>
+          <div class="footer-column">
+            <h3>Quick Links</h3>
+            <ul class="footer-links">
+              <li>
+                <a href="#"
+                  >Home <img src="/assets/Vector 15.png" alt="Vector"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  >About <img src="/assets/Vector 15.png" alt="Vector"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  >Contact <img src="/assets/Vector 15.png" alt="Vector"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  >Blog <img src="/assets/Vector 15.png" alt="Vector"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  >FAQ <img src="/assets/Vector 15.png" alt="Vector"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  >Job <img src="/assets/Vector 15.png" alt="Vector"
+                /></a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-column">
+            <h3>Insurance Types</h3>
+            <ul class="footer-links">
+              <li>
+                <a href="#"
+                  >Motor Insurance
+                  <img src="/assets/Vector 15.png" alt="Vector"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  >Domestic Insurance
+                  <img src="/assets/Vector 15.png" alt="Vector"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  >SME Insurance <img src="/assets/Vector 15.png" alt="Vector"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  >Medical Malpractice Insurance
+                  <img src="/assets/Vector 15.png" alt="Vector"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  >Vehicle Insurance
+                  <img src="/assets/Vector 15.png" alt="Vector"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  >House Insurance
+                  <img src="/assets/Vector 15.png" alt="Vector"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  >Travel Insurance
+                  <img src="/assets/Vector 15.png" alt="Vector"
+                /></a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-column social-section">
+            <h3>Follow us on</h3>
+            <div class="social-links">
+              <a href="#" class="social-facebook" aria-label="Facebook">
+                <img
+                  src="/assets/Frame 1171279839.png"
+                  alt="Vector"
+                  class="social-link-icon"
+                />
+              </a>
+              <a href="#" class="social-instagram" aria-label="Instagram">
+                <img
+                  src="/assets/Frame 1171279840.png"
+                  alt="Vector"
+                  class="social-link-icon"
+                />
+              </a>
+              <a href="#" class="social-linkedin" aria-label="LinkedIn">
+                <img
+                  src="/assets/Frame 1171279841.png"
+                  alt="Vector"
+                  class="social-link-icon"
+                />
+              </a>
+              <a href="#" class="social-pinterest" aria-label="Pinterest">
+                <img
+                  src="/assets/Frame 1171279842.png"
+                  alt="Vector"
+                  class="social-link-icon"
+                />
+              </a>
+            </div>
+          </div>
         </div>
+        <div class="footer-bottom">
+          <div class="copyright">
+            <span>©</span>
+            <img
+              src="/assets/Vector 2.png"
+              alt="AMMN Logo"
+              class="footer-logo-img"
+            />
+            <span>2025 - All rights reserved</span>
+          </div>
+          <div class="footer-legal">
+            <a href="#">Privacy Policy</a>
+            <span>|</span>
+            <a href="#">T&C</a>
+          </div>
+        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
